# C-Standard-Lib-ASM

./: CMakeLists.txt  main.c
asm/: my_strcat.asm  my_strcpy.asm  my_strlen.asm
